# KAI-Kognitive_Artifical_Intelligence

./: .flake8  LICENSE  NOTICE  README.md  __init__.py  component_13_working_memory.py  component_14_abductive_engine.py  component_17_proof_explanation.py  component_18_proof_tree_widget.py  component_19_episodic_memory_widget.py  component_1_episodic_memory.py  component_1_netzwerk.py  component_1_netzwerk_common_words.py  component_1_netzwerk_core.py  component_1_netzwerk_database.py  component_1_netzwerk_extraction_patterns.py  component_1_netzwerk_memory.py  component_1_netzwerk_patterns.py  component_1_netzwerk_utterances.py  component_1_query_engine.py  component_1_relation_management.py  component_1_word_management.py  component_24_pattern_orchestrator.py  component_27_regex_validator.py  component_29_constraint_reasoning.py  component_30_sat_solver_core.py  component_32_state_reasoning.py  component_36_epistemic_reasoning.py  component_38_elimination_reasoning.py  component_41_input_orchestrator.py  component_42_spatial_reasoning.py  component_44_resonance_engine.py  component_45_logic_puzzle_parser.py  component_45_logic_puzzle_solver.py  component_45_logic_puzzle_solver_core.py  component_45_resonance_view_widget.py  component_45_zebra_puzzle_model.py  component_45_zebra_puzzle_solver.py  component_46_meta_learning.py  component_47_dynamic_confidence.py  (+62 more)
LICENSES/: Apache 2.0.txt
docs/: CODE_METRICS_BASELINE.md  DEVELOPER_GUIDE.md  EVALUATION_GUIDE.md  FEATURES_LEARNING.md  FEATURES_REASONING.md  FEATURES_REASONING_tmp.md  NEO4J_MANAGEMENT.md  PRODUCTION_SYSTEM.md  STATIC_ANALYSIS_SETUP.md  USER_GUIDE.md
scripts/: neo4j_maintenance.py  restart_neo4j.ps1
settings/: __init__.py  appearance_tab.py  confidence_thresholds_tab.py  kai_settings_tab.py  logging_settings_tab.py  neo4j_connection_tab.py  pattern_matching_tab.py  production_system_tab.py  settings_dialog.py
tests/: __init__.py  conftest.py  test_abductive_reasoning.py  test_adaptive_pattern_recognition.py  test_adaptive_resonance.py  test_all_relation_types.py  test_arithmetic_advanced.py  test_arithmetic_basic_operations.py  test_arithmetic_comparisons.py  test_arithmetic_concepts.py  test_arithmetic_fractions_decimals.py  test_arithmetic_properties.py  test_assignment_puzzle_fallback_detection.py  test_auto_detect_definitions.py  test_auto_detect_e2e.py  test_autonomous_learning.py  test_backward_chaining.py  test_batch_episode_linking.py  test_batch_operations.py  test_cache_performance.py  test_cheryls_birthday.py  test_combinatorial_reasoning_prisoners.py  test_confidence_feedback.py  test_confidence_manager.py  test_consistency_detection.py  test_constraint_logic_integration.py  test_constraint_reasoning.py  test_contradiction_detection.py  test_definition_strategy.py  test_dialog_system.py  test_document_parser.py  test_dokument.docx  test_dynamic_confidence.py  test_elimination_reasoning.py  test_embedding_service.py  test_enhanced_nlp.py  test_entity_extraction_bugfix.py  test_episodic_memory_basic.py  test_episodic_query_ui.py  test_episodic_reasoning.py  (+99 more)
tests/integration_scenarios/: __init__.py  conftest.py
tests/integration_scenarios/combined_scenarios/extreme/: test_full_system_stress.py  test_recursive_reasoning.py
tests/integration_scenarios/combined_scenarios/hard/: test_logic_with_arithmetic.py  test_spatial_logic_puzzle.py
tests/integration_scenarios/combined_scenarios/medium/: test_dialogue_with_learning.py  test_logic_with_facts.py  test_multi_turn_reasoning.py
tests/integration_scenarios/combined_scenarios/very_hard/: __init__.py  test_knowledge_acquisition_and_query.py  test_multi_strategy_problem.py  test_temporal_reasoning_dialogue.py
tests/integration_scenarios/results/: test_age_puzzle_with_arithmetic_20251224_151349.json  test_age_puzzle_with_arithmetic_20251224_151931.json  test_ambiguous_query_handling_20251224_133317.json  test_ambiguous_query_handling_20251224_133456.json  test_ambiguous_query_handling_20251224_133533.json  test_conditional_logic_puzzle_20251224_122108.json  test_conditional_logic_puzzle_20251224_122220.json  test_conditional_logic_puzzle_20251224_122307.json  test_conditional_logic_puzzle_20251224_122737.json  test_conditional_logic_puzzle_20251224_122912.json  test_conditional_logic_puzzle_20251224_123000.json  test_conditional_logic_puzzle_20251224_125853.json  test_conditional_logic_puzzle_20251224_130035.json  test_conditional_logic_puzzle_20251224_130135.json  test_conditional_logic_puzzle_20251224_134056.json  test_conditional_logic_puzzle_20251224_143847.json  test_conditional_logic_puzzle_20251224_144043.json  test_conditional_logic_puzzle_20251224_145944.json  test_conditional_logic_puzzle_20251224_150502.json  test_conditional_logic_puzzle_20251224_151150.json  test_conditional_logic_puzzle_20251224_153034.json  test_conditional_logic_puzzle_20251224_153229.json  test_conditional_logic_puzzle_20251224_153752.json  test_creative_improvisation_20251223_212812.json  test_elaborate_on_apple_20251223_222652.json  test_elaborate_on_apple_20251223_223150.json  test_elaborate_on_apple_20251223_223725.json  test_elaborate_on_apple_20251223_224244.json  test_emotional_intelligence_20251223_212831.json  test_five_person_ordering_20251223_212208.json  test_five_person_ordering_20251223_212238.json  test_five_person_ordering_20251223_212418.json  test_five_person_ordering_20251223_212458.json  test_five_person_ordering_20251223_214349.json  test_five_person_ordering_20251223_214430.json  test_five_person_ordering_20251223_214638.json  test_five_person_ordering_20251223_214708.json  test_five_person_ordering_20251223_215507.json  test_five_person_ordering_20251223_221117.json  test_five_person_ordering_20251223_221417.json  (+71 more)
tests/integration_scenarios/utils/: __init__.py  confidence_calibrator.py  progress_reporter.py  reasoning_analyzer.py  result_logger.py  scenario_base.py  scoring_system.py  test_confidence_calibrator.py  test_progress_reporter.py  test_reasoning_analyzer.py  test_result_logger.py  test_scoring_system.py
(+43 files in other folders)
